force-app/main/default/objects/sked__Resource_Requirement_Tag__c/sked__Resource_Requirement_Tag__c.object-meta.xml
<CustomObject>
    <label>Resource Requirement Tag</label>
    <nameField>
        <displayFormat>RRT-{0000}</displayFormat>
        <label>Resource Requirement Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Requirement Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>