force-app/main/default/objects/sked__Resource_Requirement_Tag__c/fields/sked__Resource_Requirement__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource_Requirement__c</fullName>
    <label>Resource Requirement</label>
    <referenceTo>sked__Resource_Requirement__c</referenceTo>
    <relationshipLabel>Resource Requirement Tags</relationshipLabel>
    <relationshipName>Resource_Requirement_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>