force-app/main/default/objects/sked__Resource_Requirement_Tag__c/fields/sked__Weighting__c.field-meta.xml
<CustomField>
    <fullName>sked__Weighting__c</fullName>
    <label>Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>